alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1255,11 +1255,11 @@ img {
 
     0%,
     100% {
-        transform: translateX(0);
+        transform: translateX(0) rotate(40deg);
     }
 
     50% {
-        transform: translateX(-12px);
+        transform: translateX(-12px) rotate(40deg);
     }
 }
 
@@ -1267,11 +1267,11 @@ img {
 
     0%,
     100% {
-        transform: translateY(0);
+        transform: translateY(0) rotate(40deg);
     }
 
     50% {
-        transform: translateY(-12px);
+        transform: translateY(-12px) rotate(40deg);
     }
 }
 
@@ -1590,6 +1590,7 @@ section {
 .ide_sec .left_box {
     min-height: 450px;
 }
+
 /* ide - section end */
 
 /* get started - start */
@@ -1642,7 +1643,15 @@ section {
     height: 100%;
     position: relative;
     padding: 30px 0;
+    top: 0px;
     box-shadow: inset -1px -1px 18px 0px #00000029;
+    transition: all .3s ease-out;
+}
+
+.count_clr:hover {
+    top: -10px;
+    cursor: pointer;
+    transition: all .3s ease-out;
 }
 
 .count_top_height {
@@ -1732,12 +1741,81 @@ section {
     margin: auto;
 }
 
+/* form - start */
+.form_sec {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 120px 0 !important;
+}
+
+.form_sec:before {
+    content: "";
+    background: url(../public/assets/images/enquiry.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .7;
+    z-index: 0;
+}
+
+.form_sec form {
+    box-shadow: 0px 4px 4px 0px #00000040;
+    background-color: #FFFFFFE5;
+    position: relative;
+    z-index: 1;
+    opacity: 1;
+    border-radius: 40px;
+    padding: 30px 40px;
+}
+
+.form_sec form input {
+    color: #ffffff;
+    padding: 15px 10px;
+    border-radius: 25px;
+    background-color: var(--c2);
+    border: 1px solid var(--c2);
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.form_sec form input::placeholder {
+    color: #ffffff;
+}
+
+.form_sec form button {
+    background-color: var(--c1);
+    color: #ffffff;
+    padding: 10px 30px;
+    border: 1px solid var(--c1);
+    border-radius: 20px;
+    transition: all .3s ease-out;
+}
+
+.form_sec form button:hover {
+    background-color: var(--c2);
+    border: 1px solid var(--c2);
+    transition: all .3s ease-out;
+}
+
+/* form - end */
+
 /* responsive */
 
 @media screen and (min-width: 1500px) {
     .v-about .counter_parent .counter_group {
         width: 75%;
         height: 90%;
+    }
+
+    .ide_sec .left_box {
+        background-position: right !important;
+        margin-right: 30px;
     }
 }
 
@@ -1804,11 +1882,13 @@ section {
     .nav-elements .dropdown-toggle {
         font-size: 12px;
     }
-
-
 }
 
 @media screen and (max-width: 910px) {
+    .form_sec {
+        padding: 0 20px 60px !important;
+    }
+
     .v-about .counter_parent .counter_group {
         width: 100%;
     }
@@ -2292,14 +2372,19 @@ section {
         left: 20px;
     }
 
+    .tech-icon-two {
+        right: 4%;
+        top: 6%;
+    }
+
     .tech-icon-four {
-        bottom: 45%;
+        bottom: 39%;
         left: 75%;
     }
 
     .tech-icon-three {
         left: 40%;
-        top: 45%;
+        top: 42%;
     }
 
     .dotted_lines img.dotted-line-img {
